--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nodemon --exec ts-node-dev --respawn --transpileOnly src/main.ts",
-    "start:dev": "nest start --watch",
+    "start:dev": "ts-node-dev --inspect --transpile-only --respawn --pretty -- ./src/main.ts",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
