--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@nestjs/platform-express": "^10.0.0",
     "@prisma/client": "^5.0.0",
     "@types/multer": "^1.4.7",
+    "adm-zip": "^0.5.10",
     "archiver": "^5.3.1",
     "bcrypt": "^5.1.0",
     "class-transformer": "^0.5.1",
@@ -42,6 +43,7 @@
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
+    "@types/adm-zip": "^0.5.1",
     "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
