--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "@prisma/client": "^5.0.0",
     "@types/multer": "^1.4.7",
     "adm-zip": "^0.5.10",
-    "archiver": "^5.3.1",
+    "archiver": "^5.3.2",
     "bcrypt": "^5.1.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
@@ -44,6 +44,7 @@
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
     "@types/adm-zip": "^0.5.1",
+    "@types/archiver": "^5.3.2",
     "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
